samples/_failures_safe/1761504897_28fa42_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b848fe1c.c: In function ‘main’:
./samples/SAFE/__tmp_b848fe1c.c:149:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  149 |     int filter
      |     ^~~
./samples/SAFE/__tmp_b848fe1c.c:149:5: error: expected declaration or statement at end of input
